--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.1",
     "postcss-loader": "^7.0.0",
+    "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.7.3",
