--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,5 @@
         "@babel/preset-env",
         "@babel/preset-typescript"
     ],
-    "plugins": [
-        "@babel/proposal-class-properties",
-        "@babel/proposal-object-rest-spread"
-    ]
+    "plugins": []
 }
