--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "level2",
   "version": "1.0.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/js/main.js",
   "keywords": [],
   "author": "Alexander Solovev",
   "license": "ISC",
